<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".ui.food.FoodFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/meal_name_controls_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/meal_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/meal_name_label"/>

        <EditText
            android:id="@+id/meal_name_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/meal_name_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_controls_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meal_name_controls_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/product_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/meal_product_label"/>

        <EditText
            android:id="@+id/product_name_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/product_name_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_weight_controls_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/product_controls_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/product_weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/product_weight_label"/>

        <EditText
            android:id="@+id/product_weight_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@id/product_weight_label"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/meal_time_controls_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/product_weight_controls_container"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView
            android:id="@+id/meal_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/meal_time_label"/>

        <EditText
            android:id="@+id/meal_time_value"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/meal_time_label"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="чч:мм"
            android:maxLength="5"
            android:inputType="time"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/meal_time_controls_container"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"/>
</androidx.constraintlayout.widget.ConstraintLayout>